[project]
name = "litequeue"
version = "0.12"
description = "Simple queue built on top of SQLite"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ricardo Ander-Egg Aguilar", email = "rsubacc@gmail.com" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/litements/litequeue"
Repository = "https://github.com/litements/litequeue"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.1.1",
    "ruff>=0.15.21",
    "testcontainers>=4.14.2",
]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { litequeue = false }

[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
select = ["F", "I"]
extend-select = ["Q", "RUF018", "RUF100", "TID251", "UP"]
flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }


[tool.mypy]
pretty = true
show_error_codes = true
follow_untyped_imports = true
check_untyped_defs = true
no_implicit_optional = true
cache_fine_grained = true
